Added update checker

--- a/src/main/resources/assets/everyonepoops/lang/en_us.json
+++ b/src/main/resources/assets/everyonepoops/lang/en_us.json
@@ -3,5 +3,7 @@
   "item.everyonepoops.poop": "Dung",
   //#Blocks
   "block.everyonepoops.poop_layer": "Dung Pile",
-  "block.everyonepoops.poop_block": "Block of Dung"
+  "block.everyonepoops.poop_block": "Block of Dung",
+  //Text
+  "text.new_update_notification": "A new update is available for {0}."
 }
