--- a/src/main/resources/assets/everyonepoops/lang/en_us.lang
+++ b/src/main/resources/assets/everyonepoops/lang/en_us.lang
@@ -3,3 +3,5 @@ item.poop.name=Dung
 #Blocks
 tile.poop_layer.name=Dung Pile
 tile.poop_block.name=Block of Dung
+#Text
+text.new_update_notification=A new update is available for %s
